@@ -98,6 +98,10 @@ files into the chroot.
 .TP
 CHROOT_FILE
 The file containing the chroot files.
+.TP
+CHROOT_FILE_REPACK
+Set to \[lq]true\[rq] to repack the chroot into an archive file on ending a
+session, otherwise \[lq]false\[rq].
 .SS Block device variables
 .TP
 CHROOT_DEVICE
@@ -128,7 +132,7 @@ The system-wide chroot setup directory.
 Print debugging diagnostics and perform basic sanity checking.
 .TP
 .I 05file
-Unpack and clean up file-based chroots.
+Unpack, clean up, and repack file-based chroots.
 .TP
 .I 05lvm
 Create and remove LVM snapshots.
